2006-11-22  David Gilbert  <david.gilbert@object-refinery.com>

	* java/beans/beancontext/BeanContextSupport.java
	(toArray): Added API docs,
	(toArray(Object[])): Added API docs, removed NotImplementedException.

2006-11-22  Tania Bento  <tbento@redhat.com>

	* javax/swing/JRootPane.java
	(setLayeredPane): Added documentation; throw 
	IllegalComponentStateException if layered pane parameter is null.

2006-11-22  David Gilbert  <david.gilbert@object-refinery.com>

	* java/beans/beancontext/BeanContextSupport.java
	(avoidingGui): Removed NotImplementedException.

2006-11-22  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/BufferedImageGraphics.java
	(drawGlyphVector): Clip updated area to glyph bounds.
	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(createPath): Eliminate distortion when pixel-shifting rectangles; separate
	x-coordinate and y-coordinate pixel shifting.
	(shifted): Removed method.
	(shiftX): New method, recognising scaling transforms.
	(shiftY): New method, recognising scaling transforms.
	(walkPath): Separate x-coordinate and y-coordinate pixel shifting.

2006-11-22  Roman Kennke  <kennke@aicas.com>

	* java/awt/font/TextLayout.java
	(hash): New field. Caches the hash code.
	(hashCode): Implemented.

2006-11-22  Roman Kennke  <kennke@aicas.com>

	* java/awt/image/ImageFilter.java
	Reformat whole class.
	(getFilterInstance): Don't touch the consumer field. Don't check
	consumer.
	(imageComplete): Don't check consumer.
	(setColorModel): Don't check consumer.
	(setDimensions): Don't check consumer.
	(setHints): Don't check consumer.
	(setPixels): Don't check consumer.
	(setProperties): Pass the original property too.
	* java/awt/image/IndexColorModel.java
	(IndexColorModel(int,int,byte[],byte[],byte[],int)): Set the
	transparent pixel by calling the new helper method.
	(IndexColorModel(int,int,byte[],int,boolean,int)): Set the
	transparent pixel by calling the new helper method.
	(IndexColorModel(int,int,int[],int,boolean,int,int)): Set the